# skillratings

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  crate.yml
benches/: bench_main.rs
benches/benchmarks/: elo_bench.rs  glicko2_bench.rs  mod.rs  trueskill_bench.rs  weng_lin_bench.rs
src/: config.rs  dwz.rs  egf.rs  elo.rs  fifa.rs  glicko.rs  glicko2.rs  glicko_boost.rs  ingo.rs  lib.rs  outcomes.rs  rating.rs  sticko.rs  trueskill.rs  uscf.rs  weng_lin.rs
src/trueskill/: erf.rs  factor_graph.rs  gaussian.rs  math.rs  matrix.rs  mod.rs  schedule.rs  weights.rs
