[package]
name = "skillratings"
version = "0.15.2"
edition = "2021"
description = "Calculate a player's skill rating using algorithms like Elo, Glicko, Glicko-2, TrueSkill and many more."
readme = "README.md"
repository = "https://github.com/atomflunder/skillratings"
homepage = "https://github.com/atomflunder/skillratings"
documentation = "https://docs.rs/skillratings/"
license = "MIT OR Apache-2.0"
keywords = ["elo", "glicko", "glicko-2", "trueskill", "rating"]
categories = ["game-development", "algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench_main"
harness = false
